--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,13 +15,23 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+
     - name: Set up Python ${{ matrix.python }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python }}
-    - name: Install test dependencies
-      run: python -m pip install --upgrade nox
+
+    - name: Install Poetry
+      run: |
+        curl -sSL https://install.python-poetry.org | python3 -
+        export PATH="$HOME/.local/bin:$PATH"
+    
+    - name: Install Dependencies
+      run: |
+        poetry install
+    
     - name: Test
-      run: python -m nox -s tests-${{ matrix.python }}
+      run: poetry run nox -s tests-${{ matrix.python }}
+    
     - name: Lint
-      run: python -m nox -s lint
+      run: poetry run nox -s lint
