Add pr_summarizer tool given a pr code change and comments (#7)
* Add pr_summarizer tool given a pr code change and comments

* Add openai key to .env.example

* use raw http request to call ollama instead of openai api

* successfully use num_ctx by calling /api/chat to ollama

* refactor PRSummarizer to take in BaseClient for llm

---------

Co-authored-by: Ang Wang <ang@perfeed.io>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ fastai = "^2.7.17"
 ghapi = "^1.0.6"
 openai = "^1.51.0"
 ollama = "^0.3.3"
+dynaconf = "^3.2.6"
+tiktoken = "^0.8.0"
 
 
 [build-system]
