--- a/perfeed/settings/pr_summary_prompts.toml
+++ b/perfeed/settings/pr_summary_prompts.toml
@@ -9,36 +9,9 @@ Your task is to provide a full description for the PR based on the user provided
 
 Keep the output concise so it's easy to read and understand.
 
-The output must be a JSON object equivalent to type $PRDescription, according to the following Pydantic definitions:
+The output must be a JSON object equivalent to type $PRDescription, according to the following definitions:
 ===
-class PRType(str, Enum):
-    bug_fix = "Bug fix"
-    tests = "Tests"
-    enhancement = "Enhancement"
-    documentation = "Documentation"
-    other = "Other"
-
-class FileDescription(BaseModel):
-    filename: str = Field(description="The full file path of the relevant file.")
-    language: str = Field(description="The programming language of the relevant file.")
-    changes_summary: str = Field(description="concise summary of the changes in the relevant file, in bullet points (1-4 bullet points).")
-    changes_title: str = Field(description="an informative title for the changes in the files, describing its main theme (5-10 words).")
-    label: str = Field(description="a single semantic label that represents a type of code changes that occurred in the File. Possible values (partial list): 'bug fix', 'tests', 'enhancement', 'documentation', 'error handling', 'configuration changes', 'dependencies', 'formatting', 'miscellaneous', ...")
-
-class CommentDescription(BaseModel):
-    id: int = Field(description='comment_id')
-    html_url: str = Field(description="the url of the comment")
-    summary: str = Field(description="provide the context and summerize what the comment tries to address")
-    eval_aspect: array = Field(description="which evaluation cateogry the comment fall into?")
-    lead_to_action: str = Field(description="what impact does the comment have? any code change, reply, or no action?")
-    lead_to_action_desc: str = Field(description="provide description on lead_to_action field")
-
-class PRDescription(BaseModel):
-    type: List[PRType] = Field(description="one or more types that describe the PR content. Return the label member value (e.g. 'Bug fix', not 'bug_fix')")
-    title: str = Field(description="an informative title for the PR, describing its main theme")
-    description: str = Field(description="an informative and concise description of the PR. Use bullet points. Display first the most significant changes.")
-    pr_files: List[FileDescription] = Field(max_items=15, description="a list of the files in the PR, and summary of their changes")
-    comments: List[CommentDescription] = Field(max_items=10, descrioption="a list of the comments in the PR. Display first the most useful comments.")
+{{PRDescription}}
 ===
 
 Example output:
