--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,3 @@
-# this file is *not* meant to cover or endorse the use of GitHub Actions, but rather to
-# help test this project
-
 name: Test
 
 on: [push, pull_request]
@@ -12,6 +9,7 @@ jobs:
         python: ['3.11', '3.12']
         platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
+    
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -24,14 +22,29 @@ jobs:
     - name: Install Poetry
       run: |
         curl -sSL https://install.python-poetry.org | python3 -
-        export PATH="$HOME/.local/bin:$PATH"
-    
+        echo "export PATH=$HOME/.local/bin:$PATH" >> $GITHUB_ENV
+
+    - name: Cache dependencies
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.cache/pypoetry
+          ~/.virtualenvs
+        key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-poetry-
+
     - name: Install Dependencies
       run: |
-        poetry install
+        poetry config virtualenvs.create true
+        poetry install --no-interaction --no-ansi
+      env:
+        POETRY_HTTP_TIMEOUT: 600
+        POETRY_VIRTUALENVS_IN_PROJECT: false
+        PYTHON_KEYRING_BACKEND: keyring.backends.null.Keyring
     
-    - name: Test
+    - name: Run Tests
       run: poetry run nox -s tests-${{ matrix.python }}
-    
+
     - name: Lint
       run: poetry run nox -s lint
