Add a simple implementation for WeeklySummarizer to wire up end to end flows

--- a/perfeed/settings/pr_summary_prompts.toml
+++ b/perfeed/settings/pr_summary_prompts.toml
@@ -69,6 +69,6 @@ PR comments:
 '{{comments}}'
 ======
 
-Response (should be a valid json, and nothing else):
+Response (should be a valid PRSummary json, and nothing else):
 ```json
 """
