--- a/perfeed/settings/pr_summary_prompts.toml
+++ b/perfeed/settings/pr_summary_prompts.toml
@@ -18,9 +18,9 @@ Example output:
 
 ```json
 {
-    "type": ["Bug fix"],
+    "type": ["..."],
     "title": "...",
-    "description": "- ...",
+    "description": "...",
     "pr_files": [
         {
             "filename": "...",
@@ -33,8 +33,10 @@ Example output:
     ],
     "comments": [
         {
-            "id": ...,
+            "parent_thread_id": ...,
+            "child_thread_ids": [...],
             "html_url": "...",
+            "users": [...]
             "summary": "...",
             "eval_aspect": ["..."],
             "lead_to_action": "...",
@@ -69,6 +71,6 @@ PR comments:
 '{{comments}}'
 ======
 
-Response (should be a valid PRSummary json, and nothing else):
-```json
+Response only json, no description before or after.
+Answer:
 """
