move comments_to_threads github.py and created a test. add comment details to thread so weekly can get more low level details.

--- a/perfeed/settings/pr_summary_prompts.toml
+++ b/perfeed/settings/pr_summary_prompts.toml
@@ -38,6 +38,7 @@ Example output:
             "html_url": "...",
             "users": [...]
             "summary": "...",
+            "details": "...",
             "eval_aspect": ["..."],
             "lead_to_action": "...",
             "lead_to_action_desc": "..."
