--- a/perfeed/settings/weekly_summary_prompts.toml
+++ b/perfeed/settings/weekly_summary_prompts.toml
@@ -10,7 +10,6 @@ The main goal is to align the work with their sprint objectives. Directions on t
 - Mention any noteworthy refactors or architecture changes.
 - Provide the details of pr review process.
 
-
 Example 1:
 John merged 2 PRs this week - one is a documentary/bug fix and the other one is a feature enhancement.
 
@@ -60,5 +59,5 @@ Here's the pull requests from the team, given as a list of PRSummary.
 {{pr_summaries}}
 =====
 
-Answer with proper newline and markdown:
+Answer:
 """
